--- a/oldcraprest/src/main/webapp/WEB-INF/web.xml
+++ b/oldcraprest/src/main/webapp/WEB-INF/web.xml
@@ -18,7 +18,7 @@
         <param-value>classpath*:META-INF/spring/applicationContext*.xml</param-value>
     </context-param>
 
-    <filter> <!-- Do we still need this? -->
+    <filter>
         <filter-name>CharacterEncodingFilter</filter-name>
         <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
         <init-param>
@@ -38,7 +38,7 @@
 
     <!-- Handles Spring requests -->
     <servlet>
-        <servlet-name>training</servlet-name>
+        <servlet-name>delirium</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
         <init-param>
             <param-name>contextConfigLocation</param-name>
@@ -48,7 +48,7 @@
     </servlet>
 
     <servlet-mapping>
-        <servlet-name>training</servlet-name>
+        <servlet-name>delirium</servlet-name>
         <url-pattern>/</url-pattern>
     </servlet-mapping>
 
